fix: 비공개 채널 참가자 id 중복 제거